discussion/kv_engine/181716/181716_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Create wrapper function for creating a memcached audit object

Change-Id: I704bb8526458e339654a77a0144243ceffdf639a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-24 04:39:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-24 04:45:51.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11219/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11219/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22845/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22845/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23427/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23427/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24667/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24667/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23832/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23832/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31852/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31852/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11127/ : ABORTED

Compile error at [2022-10-24T04:44:30.194Z] ../kv_engine/include/memcached/audit_interface.h:80:46:
error: use of undeclared identifier "nlohmann"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11127/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11127/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21396/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/audit_interface.h:80:46: error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
    virtual bool put_event(uint32_t eventid, nlohmann::json payload) = 0;
                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21396/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/audit_interface.h:80:46:
error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21396/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42467/ : FAILURE

CMake error: CMakeLists.txt:156 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42467/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20657/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
